# Sbotify

./: .cache  .gitignore  config.toml  main.py  pyproject.toml  readme.md  requirements.txt
TAR8856/: 8856.dic  8856.lm  8856.log_pronounce  8856.sent  8856.vocab
src/: bot.py  spotifyAPI.py
